--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -675,7 +675,8 @@ en:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: Are you sure you want to delete this comment?
-      hours_hrs: "{{hours}}H"
+      hours: "{{hours}}h"
+      hours_with_minutes: "{{hours}}h {{minutes}}m"
       cannot_edit: "Comment cannot be edited after 15 minutes"
     hours:
       add_hours: Hours
