--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -655,7 +655,8 @@ es:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: Seguro que quieres borrar este comentario?
-      hours_hrs: "{{hours}}H"
+      hours: "{{hours}}h"
+      hours_with_minutes: "{{hours}}h {{minutes}}m"
       cannot_edit: "El comentario no se puede editar 15 minutos después de publicarse"
     hours:
       add_hours: Horas
