Add header before the page list to clarify what it is.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -569,6 +569,7 @@ en:
     column:
       new_page: New Page
       cant_create: You don't have permission to create pages in this project
+      all_pages: All Pages
   task_lists:
     errors:
       name:
