Improve time tracking page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -464,6 +464,10 @@ en:
       user: Users
       project: Projects
       task: Tasks
+    filters:
+      assigned_to: People
+      tasks: Tasks
+      projects: Projects
 
   tasks:
     errors:
