--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -1,7 +1,7 @@
 # Translated by Michael Koper
 nl:
   # if latest_announcement is less than 5 characters, it will not be displayed
-  latest_announcement: "Nu met <a href='http://blog.teambox.com/whats-going-on-in-the-kitchen/'>Mobiele Site, Franse en Duitse locales en API</a>!" #TODO locales
+  latest_announcement: "Read <a href='http://blog.teambox.com'>our blog</a> for the latest news about Teambox."
   common:
     and: en
     or: of
