--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,7 +1,7 @@
 # Translated by ujifgc@gmail.com
 ru:
   # if latest_announcement is less than 5 characters, it will not be displayed
-  latest_announcement: "Теперь с <a href='http://blog.teambox.com/whats-going-on-in-the-kitchen/'>Мобильным сайтом, французским и немецким интерфейсами и API</a>!"
+  latest_announcement: "Read <a href='http://blog.teambox.com'>our blog</a> for the latest news about Teambox."
   common:
     and: и
     or: или
