--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,7 +1,7 @@
 # Translated by Diane Kurtsoglou and Fabien Basmaison
 fr:
   # if latest_announcement is less than 5 characters, it will not be displayed
-  latest_announcement: "Teambox est désormais disponible en français !"
+  latest_announcement: "Read <a href='http://blog.teambox.com'>our blog</a> for the latest news about Teambox."
   common:
     and: et
     or: ou
