--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -532,27 +532,65 @@ zh:
       title: 标题
     new: 
       submit: 添加备注
-  number: 
-    currency: 
-      format: 
-        delimiter: ","
-        format: "%u%n"
-        separator: "."
-        unit: $
-    format: 
-      delimiter: ","
+      
+  number:
+    # Used in number_with_delimiter()
+    # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
+    format:
+      # Sets the separator between the units, for more precision (e.g. 1.0 / 2.0 == 0.5)
       separator: "."
-    human: 
-      storage_units: 
+      # Delimets thousands (e.g. 1,000,000 is a million) (always in groups of three)
+      delimiter: ","
+      # Number of decimals, behind the separator (the number 1 with a precision of 2 gives: 1.00)
+      precision: 3
+
+    # Used in number_to_currency()
+    currency:
+      format:
+        # Where is the currency sign? %u is the currency unit, %n the number (default: $5.00)
+        format: "%u%n"
+        unit: "$"
+        # These three are to override number.format and are optional
+        separator: "."
+        delimiter: ","
+        precision: 2
+
+    # Used in number_to_percentage()
+    percentage:
+      format:
+        # These three are to override number.format and are optional
+        # separator:
+        delimiter: ""
+        # precision:
+
+    # Used in number_to_precision()
+    precision:
+      format:
+        # These three are to override number.format and are optional
+        # separator:
+        delimiter: ""
+        # precision:
+
+    # Used in number_to_human_size()
+    human:
+      format:
+        # These three are to override number.format and are optional
+        # separator:
+        delimiter: ""
+        precision: 1
+      storage_units:
+        # Storage units output formatting.
+        # %u is the storage unit, %n is the number (default: 2 MB)
         format: "%n %u"
-        units: 
-          byte: 
+        units:
+          byte:
             one: 字节
             other: 字节
-          gb: GB
-          kb: KB
-          mb: MB
-          tb: TB
+          kb: "KB"
+          mb: "MB"
+          gb: "GB"
+          tb: "TB"
+          
   page_title: 
     archived_task_lists: 存档任务
     create_uploads: 文件上传
